# brack

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-ja.md  README.md  README_JA.md  brack.ast.ebnf  brack.cst.ebnf  brack.ebnf  brack.nimble  build.rs  flake.nix  tmp.rs
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  missing_or_incorrect_documentation.md  question.md
.github/workflows/: ci.yml  main.yml  rc.yml
assets/: .gitignore  split_commands_with_an_argument_includes_angle_brackets.[]
brack/: Cargo.toml  build.rs
brack-codegen/: Cargo.toml
brack-codegen/src/: curly.rs  expr.rs  generate.rs  ident.rs  identifier.rs  lib.rs  square.rs  stmt.rs  text.rs
brack-expander/: Cargo.toml
brack-expander/src/: expand.rs
brack-language-server/: Cargo.toml
brack-language-server/src/: lib.rs  notification.rs  request.rs  response.rs  result.rs  server.rs
brack-language-server/src/notification/: did_change.rs  did_open.rs  did_save.rs
brack-language-server/src/request/: completion.rs  semantic_tokens.rs
brack-lower/: Cargo.toml
brack-parser/: Cargo.toml  README.md
brack-parser/src/: angle.rs  arguments.rs  ast.rs  backslash.rs  bracket.rs  bracket_close.rs  bracket_open.rs  comma.rs  cst.rs  curly.rs  dot.rs  eof.rs  error.rs  escaped.rs  expr.rs  expr_component.rs  expr_or_close.rs  expr_seq.rs  ident.rs  lib.rs  modules.rs  newline.rs  parse.rs  parser.rs  square.rs  stmt.rs  surrounded.rs  text.rs  utils.rs  whitespace.rs
brack-parser/src/debug/: debug_compile.rs
brack-plugin/: Cargo.toml  test.html.wasm
brack-plugin-manager/: Cargo.toml
brack-plugin-manager/src/: add_plugin.rs
brack-plugin/src/: feature_flag.rs  lib.rs  metadata.rs  plugin.rs  types.rs  value.rs
brack-project-manager/: Cargo.toml
brack-project-manager/src/: add_plugin.rs  config.rs  document.rs  lib.rs  plugin.rs  project.rs
brack-project-manager/src/debug/: debug_build.rs  debug_download_plugin.rs
brack-sdk-rs/: Cargo.toml
brack-sdk-rs/src/: ast.rs  lib.rs
brack-tokenizer/: Cargo.toml
brack-tokenizer/src/: angle_bracket_close.rs  angle_bracket_open.rs  arguments.rs  backslash.rs  comma.rs  curly_bracket_close.rs  curly_bracket_open.rs  dispatch.rs  dot.rs  escape.rs  identifier.rs  lib.rs  module.rs  newline.rs  square_bracket_close.rs  square_bracket_open.rs  text.rs  tokenize.rs  tokenizer.rs  tokens.rs  utils.rs  whitespace.rs
brack-tokenizer/test/: split_commands_with_two_arguments_includes_square_brackets.[]  split_japanese_and_emoji.[]  split_nesting_commands.[]  split_newlines.[]
brack-tokenizer/text/: split_commands_with_an_argument_includes_curly_brackets.[]
brack-transformer/: Cargo.toml
brack-transformer/src/: angle.rs  ast.rs  backslash.rs  bracket.rs  curly.rs  document.rs  error.rs  expr.rs  lib.rs  simplify.rs  square.rs  stmt.rs  transform.rs  transformer.rs  utils.rs
brack/src/: lib.rs  main.rs  project.rs  sub_commands.rs
crates/brack-codegen/: Cargo.toml
crates/brack-codegen/src/: curly.rs  expr.rs  generate.rs  lib.rs  square.rs  stmt.rs  text.rs
crates/brack-expander/: Cargo.toml
crates/brack-expander/src/: expand.rs
crates/brack-language-server/: Cargo.toml
crates/brack-language-server/src/: request.rs  server.rs
crates/brack-language-server/src/notification/: did_open.rs  did_save.rs
crates/brack-language-server/src/request/: completion.rs  semantic_tokens.rs
crates/brack-parser/: Cargo.toml
crates/brack-parser/src/: angle.rs  bracket.rs  bracket_close.rs  comma.rs  cst.rs  curly.rs  dot.rs  eof.rs  escaped.rs  expr.rs  expr_or_close.rs  ident.rs  lib.rs  modules.rs  newline.rs  parse.rs  parser.rs  square.rs  stmt.rs  text.rs  whitespace.rs
crates/brack-plugin/: Cargo.toml  test.html.wasm
crates/brack-plugin/src/: feature_flag.rs  lib.rs  plugin.rs  plugins.rs
crates/brack-project-manager/: Cargo.toml
crates/brack-project-manager/src/: config.rs  plugin.rs  project.rs
crates/brack-tokenizer/: Cargo.toml
crates/brack-tokenizer/src/: angle_bracket_open.rs  comma.rs  curly_bracket_close.rs  dispatch.rs  dot.rs  module.rs  square_bracket_open.rs  tokenize.rs  tokenizer.rs  tokens.rs  utils.rs
crates/brack-tokenizer/test/: multiple_errors.[]
crates/brack-transformer/: Cargo.toml
crates/brack-transformer/src/: angle.rs  ast.rs  backslash.rs  curly.rs  document.rs  expr.rs  simplify.rs  square.rs  transform.rs  utils.rs
nix/: pkgs.nix
sample-text/: split_commands_with_an_argument_includes_angle_brackets.[]  split_commands_with_an_argument_includes_square_brackets.[]  split_nesting_commands.[]
scripts/: prerelease-note.sh  release-note.sh
src/: ast.rs  brack.nim  codegen.rs  expander.rs  language_server.rs  lib.rs  main.rs  parser.rs  plugins.rs  sub_commands.rs  tokenizer.rs  tokens.rs
src/brack/: api.nim  ast.nim  generator.nim  initialize.nim  lexer.nim  modules.nim  parser.nim  std.nim  submodule.nim  tokenizer.nim
src/brack/old/: parser.nim
src/brack/types/: tokenizer.nim
src/debug/: debug_compile.rs
tests/: index.[]  test1.nim  test_parser.nim  test_tokenize.nim  test_tokenizer.nim
