[workspace]

members = [
    "brack",
    "brack-codegen",
    "brack-expander",
    "brack-language-server",
    "brack-parser",
    "brack-plugin",
    "brack-project-manager",
    "brack-sdk-rs",
    "brack-tokenizer",
]

resolver = "2"

[patch."https://github.com/brack-lang/brack"]
brack-codegen = { path = "./brack-codegen" }
brack-expander = { path = "./brack-expander" }
brack-language-server = { path = "./brack-language-server" }
brack-parser = { path = "./brack-parser" }
brack-plugin = { path = "./brack-plugin" }
brack-project-manager = { path = "./brack-project-manager" }
brack-tokenizer = { path = "./brack-tokenizer" }
brack-sdk-rs = { path = "./brack-sdk-rs" }
