[package]
name = "brack-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
brack-parser = { path = "../brack-parser" }
brack-plugin = { path = "../brack-plugin" }
brack-sdk-rs = { path = "../brack-sdk-rs" }
extism = "^1.0.0-rc3"
