[package]
name = "brack-expander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
brack-sdk-rs = { path = "../brack-sdk-rs" }
brack-plugin = { path = "../brack-plugin" }
brack-parser = { path = "../brack-parser" }
extism = "^1.0.0-rc3"
uuid = "1.6.1"
