[package]
name = "brack-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
lsp-types = "0.95"
