[package]
name = "brack-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
brack-tokenizer = { git = "https://github.com/brack-lang/brack", package = "brack-tokenizer" }
brack-sdk-rs = { git = "https://github.com/brack-lang/brack", package = "brack-sdk-rs" }
serde = { versopm = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
