[package]
name = "brack-plugin-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
reqwest = "0.11.27"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros"] }
toml = "0.8.14"
