[package]
name = "brack-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
brack-parser = { git = "https://github.com/brack-lang/brack", package = "brack-parser" }
brack-sdk-rs = { git = "https://github.com/brack-lang/brack", package = "brack-sdk-rs" }
extism = "^1.0.0-rc3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
protobuf = "=3.4.0"
modsurfer-proto = { git = "https://github.com/dylibso/modsurfer", package = "modsurfer-proto" }
modsurfer-plugins = { git = "https://github.com/dylibso/modsurfer", package = "modsurfer-plugins" }
extism-convert = { version = "1.0.3", features = ["protobuf"] }
