[package]
name = "brack-project-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
reqwest = "0.11.27"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros"] }
toml = "0.8.14"
brack-plugin = { git = "https://github.com/brack-lang/brack", package = "brack-plugin" }
futures = "0.3.30"
sha2 = "0.10.8"
bytes = "1.7.1"


[features]
default = []
debug = []

[[bin]]
name = "debug_download_plugin"
path = "src/debug/debug_download_plugin.rs"
required-features = ["debug"]
