[package]
name = "brack-language-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
lsp-types = "0.95"
brack-parser = { git = "https://github.com/brack-lang/brack", package = "brack-parser" }
brack-tokenizer = { git = "https://github.com/brack-lang/brack", package = "brack-tokenizer" }
brack-transformer = { git = "https://github.com/brack-lang/brack", package = "brack-transformer" }
brack-plugin = { git = "https://github.com/brack-lang/brack", package = "brack-plugin" }
brack-project-manager = { git = "https://github.com/brack-lang/brack", package = "brack-project-manager" }
