[package]
name = "brack-plugin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
brack-transformer = { git = "https://github.com/brack-lang/brack", package = "brack-transformer" }
extism = "1.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
extism-convert = { version = "1.4.1" }

