[package]
name = "brack-project-manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
reqwest = "0.12.8"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros"] }
toml = "0.8.14"
brack-plugin = { git = "https://github.com/brack-lang/brack", package = "brack-plugin" }
brack-tokenizer = { git = "https://github.com/brack-lang/brack", package = "brack-tokenizer" }
brack-parser = { git = "https://github.com/brack-lang/brack", package = "brack-parser" }
brack-expander = { git = "https://github.com/brack-lang/brack", package = "brack-expander" }
brack-transformer = { git = "https://github.com/brack-lang/brack", package = "brack-transformer" }
brack-codegen = { git = "https://github.com/brack-lang/brack", package = "brack-codegen" }
futures = "0.3.30"
sha2 = "0.10.8"
bytes = "1.8.0"


[features]
default = []
debug = []

[[bin]]
name = "debug_download_plugin"
path = "src/debug/debug_download_plugin.rs"
required-features = ["debug"]

[[bin]]
name = "debug_build"
path = "src/debug/debug_build.rs"
required-features = ["debug"]
