[package]
name = "brack-tokenizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
unicode-segmentation = "1.11"
serde = { version = "1.0.203", features = ["derive"] }
pretty_assertions = "1.4.0"
