[package]
name = "brack-tokenizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
unicode-segmentation = "1.12"
serde = { version = "1.0.203", features = ["derive"] }
pretty_assertions = "1.4.1"
