[package]
name = "brack-transformer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
brack-tokenizer = { git = "https://github.com/brack-lang/brack", package = "brack-tokenizer" }
brack-parser = { git = "https://github.com/brack-lang/brack", package = "brack-parser" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"

[dependencies.uuid]
version = "1.11.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[features]
default = []
debug = []

[[bin]]
name = "debug_compile"
path = "src/debug/debug_compile.rs"
required-features = ["debug"]
